- Change (Linux): Tweaked the compiler and linker settings to reduce the binary size
- Change: Updated the free open source particle engine "SPARK" (http://spark.developpez.com) to version 1.5.5
- Change: Updated FMOD Ex from version "4.32.08" to "4.36.04" (has Android support)
- Change: Updated sample sound files to make them work with FMOD Ex as well
- Bugfix: PLRendererOpenGL & PLRendererOpenGLES2: Automatic texture uncompression was broken ("Passing "empty" images to the GPU no longer creates internal image data"-change in PixelLight 0.9.6-R1)
- Bugfix: "PLEngine::EngineApplication": The clear color hint within scenes was broken
- Bugfix (Windows): "PLFrontendOS::OSWindowWindows::SetPositionSize()" was not setting the window size correctly (the window border must be ignored)
- Bugfix (Linux): "PLFrontendOS::OSWindowLinux::GetX()" & "PLFrontendOS::OSWindowLinux::GetY()" were not returning the window position correctly (window decoration issue)
- Bugfix: "PLFrontendPLGui" was not returning and setting the window size correctly (the window border must be ignored)


Changes in PixelLight 0.9.8-R1 (released on August 23, 2011 - one year after the first public PixelLight release and nearly 9 years after development start on September 16, 2002)
  Please note that this release comes with several breaking changes with the goal to simplify the overall structure of PixelLight, have a look into the diaries (Git repository) for details
- Feature: Applications, including their lifecyle, are now controlled by frontends in order to make the PixelLight technology usable for more use cases
- Feature: Added a null frontend without any GUI involved, useful for example when only rendering into background buffers
- Feature: Added a lightweight native OS frontend
- Feature: Added a frontend for PixelLight's own GUI system (uniform for OS & ingame) perfectly integrated into the complete system