@@ -4,6 +4,7 @@ Changes in PixelLight 0.9.9-R1 (not yet released)
 - Change: Updated the free open source particle engine "SPARK" (http://spark.developpez.com) to version 1.5.5
 - Change: Updated FMOD Ex from version "4.32.08" to "4.36.04" (has Android support)
 - Change: Updated sample sound files to make them work with FMOD Ex as well
+- Bugfix: Loop and 2D are now working within the FMOD Ex sound backend
 - Bugfix: PLRendererOpenGL & PLRendererOpenGLES2: Automatic texture uncompression was broken ("Passing "empty" images to the GPU no longer creates internal image data"-change in PixelLight 0.9.6-R1)
 - Bugfix: "PLEngine::EngineApplication": The clear color hint within scenes was broken
 - Bugfix (Windows): "PLFrontendOS::OSWindowWindows::SetPositionSize()" was not setting the window size correctly (the window border must be ignored)
